@@ -100,7 +100,50 @@ public:
     }
 };
 
+class spell_item_kilsorrow_banner_groupquests : public SpellScriptLoader
+{
+public:
+    spell_item_kilsorrow_banner_groupquests() : SpellScriptLoader("spell_item_kilsorrow_banner") { }
+
+    class spell_item_kilsorrow_banner_groupquests_SpellScript : public SpellScript
+    {
+        PrepareSpellScript(spell_item_kilsorrow_banner_groupquests_SpellScript);
+
+        void OnSummon(SpellEffIndex /*effIndex*/)
+        {
+            if (Player* player = GetCaster()->ToPlayer())
+            {
+                if (Group* group = player->GetGroup())
+                {
+                    for (GroupReference* groupRef = group->GetFirstMember(); groupRef != nullptr; groupRef = groupRef->next())
+                    {
+                        if (Player* member = groupRef->GetSource())
+                        {
+                            if (member->GetDistance2d(player) < 200 && member != player)
+                            {
+                                if (member->GetQuestStatus(9931) == QUEST_STATUS_INCOMPLETE)
+                                    member->KilledMonsterCredit(18393);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        void Register() override
+        {
+            OnEffectLaunch += SpellEffectFn(spell_item_kilsorrow_banner_groupquests_SpellScript::OnSummon, EFFECT_0, SPELL_EFFECT_SUMMON_OBJECT_WILD);
+        }
+    };
+
+    SpellScript* GetSpellScript() const override
+    {
+        return new spell_item_kilsorrow_banner_groupquests_SpellScript();
+    }
+};
+
 void AddSC_item_spell_scripts_groupquests()
 {
     new spell_item_muisek_vessel_groupquests();
+    new spell_item_kilsorrow_banner_groupquests();
 }
